--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,21 @@
 [package]
 name = "dollgen"
 version = "0.1.0"
+authors = ["0x57e11a"]
 edition = "2021"
+description = "an unopinionated and extensible Static Site Generator, natively supporting liquid, markdoll, scss, and compiling rust to wasm"
+readme = "README.doll"
+repository = "https://codeberg.org/0x57e11a/dollgen"
+rust-version = "1.81"
+license = "MIT"
+keywords = ["web", "ssg", "wasm", "webassembly", "text"]
+categories = ["web-programming", "wasm"]
 
 [dependencies]
 capturing-glob = "0.1.1"
 strfmt = "0.2.4"
 thiserror = "2.0.3"
 anyhow = "1.0.93"
-codemap = "0.1.3"
 
 liquid = { version = "0.26.9", optional = true }
 toml = { version = "0.8.19", optional = true }
@@ -18,6 +25,7 @@ ariadne = { version = "0.4.1", optional = true }
 hashbrown = { version = "0.14.5", optional = true }
 grass = { version = "0.13.4", optional = true }
 convert_case = { version = "0.6.0", optional = true }
+wasm-bindgen-cli-support = { version = "0.2.95", optional = true }
 
 [features]
 default = []
@@ -27,4 +35,14 @@ liquid-markdoll = ["dep:markdoll", "dep:ariadne", "dep:hashbrown", "liquid"]
 
 scss = ["dep:grass"]
 
-wasm = ["dep:convert_case", "dep:toml"]
+wasm = ["dep:convert_case", "dep:toml", "dep:wasm-bindgen-cli-support"]
+
+all = ["liquid", "liquid-markdoll", "scss", "wasm"]
+
+[[example]]
+name = "example"
+required-features = ["all"]
+
+[workspace]
+members = ["examples/src/functional-place/the-code"]
+resolver = "2"
