--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "an unopinionated and extensible Static Site Generator, natively supporting liquid, markdoll, scss, and compiling rust to wasm"
 readme = "README.doll"
 repository = "https://codeberg.org/0x57e11a/dollgen"
-rust-version = "1.81"
+rust-version = "1.86"
 license = "MIT"
 keywords = ["web", "ssg", "wasm", "webassembly", "text"]
 categories = ["web-programming", "wasm"]
@@ -15,27 +15,27 @@ publish = false # todo
 [dependencies]
 capturing-glob = "0.1.1"
 strfmt = "0.2.4"
-thiserror = "2.0.6"
-miette = "7.4.0"
-anyhow = "1.0.93"
+thiserror = "2.0.12"
+miette = "7.5.0"
+anyhow = "1.0.97"
 tracing = "0.1.41"
-tyfling = "0.1.2"
+tyfling = "0.1.3"
 
-serde = { version = "1.0.214", features = ["derive"], optional = true }
-toml = { version = "0.8.19", optional = true }
-hashbrown = { version = "0.14.5", optional = true }
-convert_case = { version = "0.6.0", optional = true }
+serde = { version = "1.0.219", features = ["derive"], optional = true }
+toml = { version = "0.8.20", optional = true }
+hashbrown = { version = "0.15.2", optional = true }
+convert_case = { version = "0.8.0", optional = true }
 
-liquid = { version = "0.26.9", optional = true }
+liquid = { version = "0.26.11", optional = true }
 
-minijinja = { version = "2.6.0", features = ["loader"], optional = true }
+minijinja = { version = "2.9.0", features = ["loader"], optional = true }
 
-#markdoll = { version = "3.0.3", optional = true }
-markdoll = { path = "../markdoll", optional = true } # todo
+markdoll = { version = "4.0.0", optional = true }
+#markdoll = { path = "../markdoll", optional = true } # todo
 
 grass = { version = "0.13.4", optional = true }
 
-wasm-bindgen-cli-support = { version = "0.2.95", optional = true }
+wasm-bindgen-cli-support = { version = "0.2.100", optional = true }
 
 [features]
 default = []
